Fix events stats route